# rust-browser-proofs

./: .dockerignore  .gitignore  .lefthookrc  .mise.toml  Cargo.toml  Dockerfile  Dockerfile.raspi4b  README.md  agents.toml  justfile  lefthook.yml
.cache/fabric/action-timeline/laradon/_transport/: pagedb-replay.jsonl  zenoh.jsonl
.cache/fabric/action-timeline/laradon/p3/: .hlc-state.json  timeline.jsonl
.devcontainer/: devcontainer.json
.gitea/workflows/: smoke.yml
.omx/logs/: omx-2026-07-02.jsonl
.omx/state/: native-stop-state.json  session.json
.omx/state/sessions/019f230b-5e2a-7753-8f25-9edb4c9f1fc6/: prompt-routing-state.json
.omx/state/sessions/019f2333-61ed-76c0-a58e-d5b7def96712/: prompt-routing-state.json
.omx/state/sessions/019f233a-6eb0-7562-b03d-cc1cb300bcec/: prompt-routing-state.json
.omx/state/sessions/019f2340-12b1-7e01-a19d-5175ffbaa44e/: prompt-routing-state.json
.omx/state/sessions/019f2345-64a6-72f3-a6bc-8082497957de/: prompt-routing-state.json
.omx/state/sessions/019f2378-4a08-7643-91a6-30c63b58890a/: prompt-routing-state.json
.omx/state/sessions/019f237e-3782-7ac3-af4d-2c07a5e9a039/: prompt-routing-state.json
container/generic-workspace/: Cargo.toml
container/playwright/: package-lock.json  package.json  run-opfs-battery.mjs  run-opfs-battery.sh
container/puppeteer/: package-lock.json  package.json  run-opfs-battery.mjs  run-opfs-battery.sh
crates/rust-browser-proofs/: Cargo.toml
crates/rust-browser-proofs/src/: lib.rs  opfs.rs
crates/rust-browser-proofs/tests/: opfs_worker_battery.rs
docs/: browser-environment-checklist.md  container.md  host-platform-matrix.md  iphone-chrome-simulator.md  proof-matrix.md  raspi4b-model.md  setup-recovery.md  using-rust-browser-proofs.md
docs/plans/: 2026-07-02-pagedb-opfs-sync-adapter.md
docs/pr/: 2026-07-opfs-sync-backend.md
docs/prd/: 2026-07-02-pagedb-opfs-adapter.md
fixtures/consumer-battery/: Cargo.toml
fixtures/consumer-battery/src/: lib.rs
harness/: Cargo.toml
harness/js/: pagedb-opfs-benchmark.mjs  pagedb-opfs-bootstrap.mjs
harness/src/: driver.rs  fault.rs  idb_driver.rs  lib.rs  receipt.rs
harness/tests/: bootstrap.rs  conformance.rs  engine.rs  idb_crash.rs  idb_cross_tab.rs  idb_cross_worker.rs  idb_receipt.rs  idb_spike.rs  idb_store.rs  idb_vfs.rs  manifest.rs  oracle.rs  raw_sync_benchmark.rs  readme_matrix.rs  receipt_browser.rs  receipt_native.rs  registry.rs  smoke.rs  vfs_basic.rs  windows_cross_process_lock.rs
harness/tests/support/: mod.rs
scripts/: build-iphone-chromium-source.sh  cdp-browser-test.mjs  check-android-recipe-contract.sh  check-host-platform-contract.sh  check-iphone-chrome-recipe-contract.sh  check-matrix-recipe-contract.sh  check-setup-durability-contract.sh  run-browser-container.sh  run-cdp-wasm-pack-test.sh  run-raspi4b-container.sh  run-raspi4b-model-smoke.sh  run-safari-command.sh  run-with-focus-guard.sh
