# Browser test harness + durability oracle for pagedb's OPFS backend.
#
# The committed dependency points at the user's Gitea fork so Gitea Actions
# can build; local development overrides it with a gitignored
# .cargo/config.toml [patch] pointing at ~/code/pres/vendor/pagedb.
[package]
name = "pagedb-opfs-harness"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
pagedb = { git = "ssh://git@git.telpher.stream:2222/awb/pagedb.git", branch = "feat/opfs-sync-backend", features = ["opfs"] }
blake3 = "1"

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
send_wrapper = { version = "0.6", features = ["futures"] }
web-sys = { version = "0.3", features = [
    "WorkerGlobalScope",
    "WorkerNavigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "FileSystemReadWriteOptions",
    "Worker",
    "WorkerOptions",
    "WorkerType",
    "MessageEvent",
    "DedicatedWorkerGlobalScope",
    "ErrorEvent",
    "WorkerLocation",
    "Blob",
    "Url",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
tokio = { version = "1", features = ["rt", "macros"] }
