[package]
name = "rust-browser-proofs"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Dev-only Rust/Wasm OPFS browser proof battery"

[features]
runner = ["dep:rusqlite"]

[[bin]]
name = "rust-browser-proofs"
path = "src/bin/rust-browser-proofs.rs"
required-features = ["runner"]

[target.'cfg(target_arch = "wasm32")'.dependencies]
js-sys = "0.3"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "WorkerGlobalScope",
    "WorkerNavigator",
    "StorageManager",
    "FileSystemDirectoryHandle",
    "FileSystemFileHandle",
    "FileSystemSyncAccessHandle",
    "FileSystemGetFileOptions",
    "FileSystemGetDirectoryOptions",
    "FileSystemRemoveOptions",
    "FileSystemReadWriteOptions",
] }

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
wasm-bindgen-test = "0.3"

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
rusqlite = { version = "0.40.1", default-features = false, features = ["bundled"], optional = true }
