[package]
name = "rust-browser-proofs-consumer-fixture"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["cdylib", "rlib"]

[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
rust-browser-proofs = { path = "../../crates/rust-browser-proofs" }
wasm-bindgen-test = "0.3"
